--- a/package.json
+++ b/package.json
@@ -11,12 +11,22 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
+    },
+    "dependencies": {
+        "@ansur/leaflet-pulse-icon": "^0.1.1",
+        "leaflet": "^1.3.4",
+        "leaflet-ant-path": "^1.1.2",
+        "leaflet-polylinedecorator": "^1.6.0",
+        "leaflet.beautifymarker": "^1.1.1",
+        "leaflet.marker.highlight": "0.0.3"
     }
 }
