--- a/package.json
+++ b/package.json
@@ -10,19 +10,24 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.13",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.16.0",
+        "sass-loader": "^7.1.0"
     },
     "dependencies": {
         "@ansur/leaflet-pulse-icon": "^0.1.1",
+        "@ckeditor/ckeditor5-build-classic": "^11.2.0",
         "leaflet": "^1.3.4",
         "leaflet-ant-path": "^1.1.2",
         "leaflet-polylinedecorator": "^1.6.0",
